--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo-link"><img src="images/log.svg" class="logo" alt="Logo"></div>
+            <div class="logo-link"><img src="log.svg" class="logo" alt="Logo"></div>
             <ul id="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="h-img">
-                <img src="images/Copy of Green Heart Icon Environment Logo.svg" alt="Profile Picture">
+                <img src="Copy of Green Heart Icon Environment Logo.svg" alt="Profile Picture">
             </div>
         </section>
 
