--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
             <p><i class="fas fa-map-marker-alt"></i> Porur, Chennai, Tamil Nadu</p>
         </section>
     </div>
+        <div id="top-button" class="top-button">
+        ↑
+    </div>
     </main>
 
     <footer>
