--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <p><i class="fas fa-envelope"></i> <a href="mailto:Kameshwaranking5658@gmail.com">Kameshwaranking5658@gmail.com</a></p>
             <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/kameshwaran-b-6543ba22a" target="_blank">LinkedIn</a></p>
             <p><i class="fas fa-map-marker-alt"></i> Porur, Chennai, Tamil Nadu</p>
+        <p><a href=" https://wa.me/qr/BPSU5TPQYKR4L1" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i> Chat with me on WhatsApp</a></p>
         </section>
     </main>
 
