--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
         e.preventDefault();
         window.scrollTo({top: 0, behavior: 'smooth'});
     });
+         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function(e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+
     </script>
 </body>
 </html>
