--- a/index.html
+++ b/index.html
@@ -80,58 +80,58 @@
         </section>
 
         <section class="por">
-
             <h1>Projects</h1>
             <div id="projects" class="projects">
-           
-            <div class="project-card">
-                <div class="project-carousel">
-                    <div class="carousel-wrapper">
-                        <div class="carousel-slide">
-                            <img src="p1image.png" alt="Project 1 Image 1">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="p1image2.png" alt="Project 1 Image 2">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="p1image3.png" alt="Project 1 Image 3">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="p1image4.png" alt="Project 1 Image 4">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="p1image5.png" alt="Project 1 Image 4">
-                        </div>
-                    </div>
-                </div>
-                <div class="project-info">
-                    <h3>Responsive Personal Portfolio</h3>
-                    <p>This Personal Portfolio Website showcases my skills, experience, and projects in a professional and visually appealing manner. It is designed to provide an overview of my technical and soft skills, my academic background, and my work experience, with a focus on my journey as a computer science student and web developer.</p>
-                </div>
-            </div>
-            <div class="project-card">
-                <div class="project-carousel">
-                    <div class="carousel-wrapper">
-                        <div class="carousel-slide">
-                            <img src="p2image1.png" alt="Project 2 Image 1">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="p2image2.png" alt="Project 2 Image 2">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="p2image3.png" alt="Project 2 Image 3">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="p2image4.png" alt="Project 2 Image 4">
+                <div class="project-card">
+                    <div class="project-carousel">
+                        <div class="carousel-wrapper">
+                            <div class="carousel-slide">
+                                <img src="p1image.png" alt="Project 1 Image 1">
+                            </div>
+                            <div class="carousel-slide">
+                                <img src="p1image2.png" alt="Project 1 Image 2">
+                            </div>
+                            <div class="carousel-slide">
+                                <img src="p1image3.png" alt="Project 1 Image 3">
+                            </div>
+                            <div class="carousel-slide">
+                                <img src="p1image4.png" alt="Project 1 Image 4">
+                            </div>
+                            <div class="carousel-slide">
+                                <img src="p1image5.png" alt="Project 1 Image 5">
+                            </div>
                         </div>
                     </div>
+                    <div class="project-info">
+                        <h3>Responsive Personal Portfolio</h3>
+                        <p>This Personal Portfolio Website showcases my skills, experience, and projects in a professional and visually appealing manner. It is designed to provide an overview of my technical and soft skills, my academic background, and my work experience, with a focus on my journey as a computer science student and web developer.</p>
+                        <a href="https://kameshwaran5658.github.io/Portfolio/" target="_blank" class="view-project-btn">View Project</a>
+                    </div>
                 </div>
-                <div class="project-info">
-                    <h3>Enhanced Visuals - Advanced Gallery</h3>
-                    <p>Enhanced Visuals - Advanced Gallery is a modern web application designed to showcase diverse collections of high-quality images. This gallery features dynamic filtering options, allowing users to browse through categories such as nature, architecture, and portraits with ease. Each image is displayed in an elegant layout optimized for both desktop and mobile viewing, ensuring a seamless user experience. The gallery also includes a lightbox feature for detailed image viewing and interaction. Developed using HTML, CSS with Bootstrap, and JavaScript, this project emphasizes visual appeal, usability, and performance, making it ideal for photography enthusiasts and professionals alike.</p>
+                <div class="project-card">
+                    <div class="project-carousel">
+                        <div class="carousel-wrapper">
+                            <div class="carousel-slide">
+                                <img src="p2image1.png" alt="Project 2 Image 1">
+                            </div>
+                            <div class="carousel-slide">
+                                <img src="p2image2.png" alt="Project 2 Image 2">
+                            </div>
+                            <div class="carousel-slide">
+                                <img src="p2image3.png" alt="Project 2 Image 3">
+                            </div>
+                            <div class="carousel-slide">
+                                <img src="p2image4.png" alt="Project 2 Image 4">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Enhanced Visuals - Advanced Gallery</h3>
+                        <p>Enhanced Visuals - Advanced Gallery is a modern web application designed to showcase diverse collections of high-quality images. This gallery features dynamic filtering options, allowing users to browse through categories such as nature, architecture, and portraits with ease. Each image is displayed in an elegant layout optimized for both desktop and mobile viewing, ensuring a seamless user experience. The gallery also includes a lightbox feature for detailed image viewing and interaction. Developed using HTML, CSS with Bootstrap, and JavaScript, this project emphasizes visual appeal, usability, and performance, making it ideal for photography enthusiasts and professionals alike.</p>
+                        <a href="https://kameshwaran5658.github.io/photogallery/" target="_blank" class="view-project-btn">View Project</a>
+                    </div>
                 </div>
             </div>
-        </div>
         </section>
         <section id="contact" class="contact">
             <h1>Contact</h1>
