--- a/index.html
+++ b/index.html
@@ -72,13 +72,20 @@
             </ul>
         </section>
 
+        
         <section id="experience" class="experience">
             <h1>Experience</h1>
             <h2><i class="fas fa-briefcase"></i> Intern, Full Stack Development</h2>
             <p>RETECH SOLUTIONS PVT. LTD</p>
             <p>Completed a dynamic [6 Weeks] internship at RETECH SOLUTIONS, immersing myself in the world of Full Stack Development. Collaborating with skilled professionals, I honed my expertise and gained hands-on experience in crafting robust and responsive web applications.</p>
+        
+            <h2><i class="fas fa-graduation-cap"></i> Web Development Course</h2>
+            <p><b>Skill Vertex</b></p>
+            <p>Completed a comprehensive Web Development course offered by Skill Vertex from June 10, 2024, to July 10, 2024. The course covered fundamental concepts and applications of web development, including HTML, CSS, JavaScript, server-side scripting, and database integration.</p>
+            <p>Demonstrated a deep understanding of these concepts and showcased the ability to apply them to real-world problems. Actively participated in all learning activities, including lectures, discussions, assignments, and projects. The comprehensive program ensured not only theoretical understanding but also hands-on experience through practical applications.</p>
+            <p>Successfully completed numerous coding exercises, contributed valuable insights during discussions, and delivered high-quality projects that reflected a solid command of web development techniques. This achievement is a testament to my dedication, hard work, and proficiency in web development.</p>
+            <a href="WD-certficate.pdf" target="_blank" class="certificate-btn"><i class="fas fa-file-pdf"></i> View Certificate</a>
         </section>
-
         <section class="por">
             <h1>Projects</h1>
             <div id="projects" class="projects">
